--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFED1J5IIBXNkPTtCPSN2i",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO5qOiwZW2ZpIIAR4exxtG8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,8 +90,6 @@
         }
       ],
       "source": [
-        "!pip install shap\n",
-        "!pip install scikit-optimize\n",
         "!pip install --upgrade statsmodels"
       ]
     },
@@ -104,31 +103,17 @@
         "import seaborn as sns\n",
         "\n",
         "from scipy import stats\n",
-        "from scipy.stats import skew\n",
         "from sklearn import preprocessing\n",
         "from sklearn.cluster import KMeans\n",
-        "from sklearn.model_selection import train_test_split, cross_validate, learning_curve\n",
-        "from sklearn.preprocessing import StandardScaler, RobustScaler, Normalizer, MinMaxScaler, OneHotEncoder, OrdinalEncoder, LabelEncoder, FunctionTransformer\n",
-        "from sklearn.pipeline import Pipeline\n",
-        "from sklearn.compose import ColumnTransformer\n",
-        "from sklearn.feature_selection import SelectKBest, f_classif\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import Normalizer, MinMaxScaler\n",
         "\n",
-        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, jaccard_score, log_loss, mean_absolute_error, mean_squared_error, silhouette_score\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from xgboost import XGBClassifier\n",
-        "\n",
-        "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
-        "from skopt import BayesSearchCV\n",
+        "from sklearn.metrics import mean_absolute_error, mean_squared_error, silhouette_score\n",
         "\n",
         "from statsmodels.tsa.seasonal import seasonal_decompose\n",
         "from statsmodels.tsa.holtwinters import SimpleExpSmoothing, Holt\n",
         "from statsmodels.tsa.arima.model import ARIMA\n",
         "from pandas.plotting import autocorrelation_plot\n",
-        "\n",
-        "import shap\n",
         "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
@@ -154,8 +139,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# initialize random state\n",
-        "random_state = 25\n",
+        "\n",
         "\n",
         "# set plot style for whole notebook\n",
         "sns.set_style('darkgrid')"
@@ -209,8 +193,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## DATA CLEANSING\n",
-        "# Pengurusan duplicate dan isnull bisa dilakukan sebelum atau sesudah digabung\n"
+        "# DATA CLEANSING\n",
+        "\n"
       ],
       "metadata": {
         "id": "--MLbATDtXWA"
@@ -2111,7 +2095,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Gabung Semua Data"
+        "# Merge All Data"
       ],
       "metadata": {
         "id": "pBAZa9QHvi5_"
@@ -2544,7 +2528,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Model Machine Learning Regresi (time series)"
+        "# Model Machine Learning Regresi (time series) Using ARIMA"
       ],
       "metadata": {
         "id": "5Gf_sfe3yKFq"
@@ -2906,7 +2890,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## check stationarity data"
+        "## Check Stationarity Data"
       ],
       "metadata": {
         "id": "dNW5THgQ21YV"
@@ -3999,31 +3983,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "def rmse (y_actual, y_pred):\n",
-        "  '''\n",
-        "  function to calculate RMSE\n",
-        "  '''\n",
-        "  print(f'RMSE value (mean_squared_error(y_actual, y_pred)**0.5)')\n",
-        "\n",
-        "def eval(y_actual, y_pred):\n",
-        "  '''\n",
-        "  function to ecal machine learning modelling\n",
-        "  '''\n",
-        "  rmse(y_actual, y_pred)\n",
-        "  print(f'MAE value (mean_absolute_error(y_actual, y_pred))')"
+        "## Modelling"
       ],
       "metadata": {
-        "id": "HzvkX3CW5ARW"
-      },
-      "execution_count": 37,
-      "outputs": []
+        "id": "ZVyAigYOOaS2"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "def rmse(y_actual, y_pred):\n",
         "    '''\n",
         "    Fungsi untuk menghitung RMSE\n",
@@ -4229,49 +4199,9 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "submission = pd.DataFrame()\n",
-        "submission['date'] = df_test['date']\n",
-        "submission['Qty'] = np.zeros(len(df_test))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 512
-        },
-        "id": "9T3lWVM4Bd6D",
-        "outputId": "3757212e-7f62-45d4-b03c-78069e4eb71a"
-      },
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3802\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3803\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'date'",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-42-53da7fee6e1f>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msubmission\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msubmission\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0msubmission\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Qty'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3806\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3807\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3808\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3809\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3803\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3804\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3805\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3806\u001b[0m                 \u001b[0;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'date'"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "## Clustering"
+        "# Clustering"
       ],
       "metadata": {
         "id": "g2POV2hc8GlD"
